...
            android:layout_marginTop="4dp"
            android:text="@string/logo_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/search_course"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/logo"
            android:background="@drawable/shape_edit_box_bg"
...
    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/course_list_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/course_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

...
